--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -6,7 +6,7 @@ spring:
           kakao:
             client-id: ${KAKAO_CLIENT}
             client-secret: ${KAKAO_SECRET}
-            redirect-uri: {baseUrl}/login/oauth2/code/kakao
+            redirect-uri: ${BASE_URL}/login/oauth2/code/kakao
             client-authentication-method: POST
             authorization-grant-type: authorization_code
             scope:
@@ -16,8 +16,8 @@ spring:
 
           naver:
             client-id: ${NAVER_CLIENT}
-            client-secret: {NAVER_SECRET}
-            redirect-uri: {baseUrl}/login/oauth2/code/naver
+            client-secret: ${NAVER_SECRET}
+            redirect-uri: ${BASE_URL}/login/oauth2/code/naver
             client-authentication-method: POST
             authorization-grant-type: authorization_code
             scope:
@@ -37,3 +37,5 @@ spring:
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: id
+  config:
+    import: optional:file:.env[.properties]
