--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/pintoss
-    username: dataliteracy
-    password: 1234
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
@@ -14,3 +14,5 @@ spring:
       ddl-auto: update
   profiles:
     include: oauth
+  config:
+    import: optional:file:.env[.properties]
