[ ✨ | #25 | feature ] 유저 관련 서비스 로직 구현
- 비밀번호 찾은 후 이메일 전송
- refresh 토큰 로직 수정
- ConflictException 추가

2024.08.04

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,14 @@ spring:
     include: oauth
   config:
     import: optional:file:.env[.properties]
+  mail:
+    host: smtp.naver.com
+    port: 465
+    username: c0810@naver.com
+    password: ${OWNER_EMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          ssl:
+            enable: true
