[ ⚙️ | #29 | env ] aws 관련 환경변수 임의로 설정
2024.08.06

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     hibernate:
       ddl-auto: update
   profiles:
-    include: oauth
+    include: oauth, aws
   config:
     import: optional:file:.env[.properties]
   mail:
