--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -18,7 +18,6 @@ spring:
             client-id: ${NAVER_CLIENT}
             client-secret: ${NAVER_SECRET}
             redirect-uri: ${BASE_URL}/login/oauth2/code/naver
-            client-authentication-method: POST
             authorization-grant-type: authorization_code
             scope:
               - name
@@ -36,6 +35,6 @@ spring:
             authorization-uri: https://nid.naver.com/oauth2.0/authorize
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
-            user-name-attribute: id
+            user-name-attribute: response
   config:
     import: optional:file:.env[.properties]
