--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,29 +1,60 @@
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/pintoss
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    show-sql: true
-    database: postgresql
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-    hibernate:
-      ddl-auto: update
+
+  # profile
   profiles:
-    include: oauth, aws
+    group:
+      production:
+        - production
+      develop:
+        - develop
+      local:
+        - local
+      default: local
+
+    include: aws, oauth
+
   config:
     import: optional:file:.env[.properties]
+
   mail:
     host: smtp.naver.com
     port: 465
     username: c0810@naver.com
-    password: ${OWNER_EMAIL_PASSWORD}
+    password: dummy
     properties:
       mail:
         smtp:
           auth: true
           ssl:
             enable: true
+
+  # datasource
+  datasource:
+    driver-class-name: org.postgresql.Driver
+
+  # jpa
+  jpa:
+    hibernate:
+      ddl-auto: none
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+aws:
+  sesv2:
+    region: ap-northeast-2
+
+springdoc:
+  use-fqn: true
+
+
+
+#server:
+#  forward-headers-strategy: native
