--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -7,11 +7,10 @@ spring:
             client-id: ${KAKAO_CLIENT}
             client-secret: ${KAKAO_SECRET}
             redirect-uri: ${BASE_URL}/login/oauth2/code/kakao
-            client-authentication-method: POST
+            client-authentication-method: client_secret_post
             authorization-grant-type: authorization_code
             scope:
-              - name
-              - email
+              - account_email
             client-name: kakao
 
           naver:
@@ -20,7 +19,6 @@ spring:
             redirect-uri: ${BASE_URL}/login/oauth2/code/naver
             authorization-grant-type: authorization_code
             scope:
-              - name
               - email
             client-name: naver
 
