[ 🚚 | | chore ] 배포 시도해본 부분 일단 공유
2024.08.29

--- a/src/main/resources/application-aws.yml
+++ b/src/main/resources/application-aws.yml
@@ -1,9 +1,9 @@
 cloud:
-  aws:
-    credentials:
-      accessKey: ${ACCESS_KEY}
-      secretKey: ${SECRET_KEY}
-    region:
-      static: ${AWS_REGION}
-    s3:
-      bucketName: ${BUCKET_NAME}
+aws:
+  credentials:
+    accessKey: AKIAXXXXXXXEXAMPLE
+    secretKey: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+  region:
+    static: us-east-1
+  s3:
+    bucketName: my-example-bucket
