--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -4,9 +4,9 @@ spring:
       client:
         registration:
           kakao:
-            client-id: ${KAKAO_CLIENT}
-            client-secret: ${KAKAO_SECRET}
-            redirect-uri: ${BASE_URL}/login/oauth2/code/kakao
+            client-id: 819428ebda4254458e971e3d9bb89822
+            client-secret: ySzHWh5333VN2ktUNVaqvrZPnvVSZZoX
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
             client-authentication-method: client_secret_post
             authorization-grant-type: authorization_code
             scope:
@@ -14,9 +14,9 @@ spring:
             client-name: kakao
 
           naver:
-            client-id: ${NAVER_CLIENT}
-            client-secret: ${NAVER_SECRET}
-            redirect-uri: ${BASE_URL}/login/oauth2/code/naver
+            client-id: ntP6_ogtZLkuD6J774IT
+            client-secret: 9cIj0Lo1b_
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
             authorization-grant-type: authorization_code
             scope:
               - email
