--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/pintoss
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:mariadb://localhost:3306/pintossmall2?serverTimezone=UTC&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+    username: pintossmall2
+    password: cho459800
+    driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     show-sql: true
-    database: postgresql
+    database: mysql
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.MariaDBDialect
     hibernate:
       ddl-auto: update
   profiles:
@@ -20,7 +20,7 @@ spring:
     host: smtp.naver.com
     port: 465
     username: c0810@naver.com
-    password: ${OWNER_EMAIL_PASSWORD}
+    password: 1234
     properties:
       mail:
         smtp:
