[ ♻️  | | refactor  ] S3 관련 코드 제거하고 다시 빌드 시도
2024.08.30

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     hibernate:
       ddl-auto: update
   profiles:
-    include: oauth, aws
+    include: oauth
   config:
     import: optional:file:.env[.properties]
   mail:
