--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/pintossmall2?serverTimezone=UTC&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+    url: jdbc:mariadb://pintossmall2.cafe24.com:3306/pintossmall2?serverTimezone=UTC&characterEncoding=UTF-8&createDatabaseIfNotExist=true
     username: pintossmall2
     password: cho459800
     driver-class-name: org.mariadb.jdbc.Driver
