--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -6,7 +6,7 @@ spring:
           kakao:
             client-id: 819428ebda4254458e971e3d9bb89822
             client-secret: ySzHWh5333VN2ktUNVaqvrZPnvVSZZoX
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            redirect-uri: https://pintossmall2.com/login/oauth2/code/kakao
             client-authentication-method: client_secret_post
             authorization-grant-type: authorization_code
             scope:
@@ -16,7 +16,7 @@ spring:
           naver:
             client-id: ntP6_ogtZLkuD6J774IT
             client-secret: 9cIj0Lo1b_
-            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            redirect-uri: https://pintossmall2.com/login/oauth2/code/naver
             authorization-grant-type: authorization_code
             scope:
               - email
