--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,29 +1,39 @@
+
+
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/pintoss
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:mariadb://localhost:3309/pintossmall2?serverTimezone=UTC&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+    username: root
+    password: roots
+    driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     show-sql: true
-    database: postgresql
+    database: mysql
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.MariaDBDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
   profiles:
-    include: oauth, aws
+    include: oauth
   config:
     import: optional:file:.env[.properties]
   mail:
     host: smtp.naver.com
     port: 465
     username: c0810@naver.com
-    password: ${OWNER_EMAIL_PASSWORD}
+    password: 1234
     properties:
       mail:
         smtp:
           auth: true
           ssl:
             enable: true
+
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+    org.springframework.web: DEBUG
+server:
+  port: 88
