--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 
-
 spring:
+  messages:
+    encoding: EUC-KR
   datasource:
     url: jdbc:mariadb://localhost:3309/pintossmall2?serverTimezone=UTC&characterEncoding=UTF-8&createDatabaseIfNotExist=true
     username: root
@@ -13,9 +14,9 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MariaDBDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   profiles:
-    include: oauth
+    include: oauth,pay
   config:
     import: optional:file:.env[.properties]
   mail:
@@ -29,6 +30,13 @@ spring:
           auth: true
           ssl:
             enable: true
+  thymeleaf:
+    cache: false
+    check-template-location: true
+    mode: HTML
+    prefix: file:src/main/resources/templates/
+    suffix: .html
+    encoding: EUC-KR
 
 
 logging:
