--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
   messages:
     encoding: EUC-KR
   datasource:
-    url: jdbc:mariadb://localhost:3309/pintossmall2?serverTimezone=UTC&characterEncoding=UTF-8&createDatabaseIfNotExist=true
-    username: root
-    password: roots
+    url: jdbc:mariadb://pintossmall2.cafe24.com:3306/pintossmall2?serverTimezone=UTC&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+    username: pintossmall2
+    password: cho459800
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     show-sql: true
