[  ✨ || feat ] 갤럭시아 머니트리 샘플 페이지 화면

--- a/src/main/resources/config.ini
+++ b/src/main/resources/config.ini
@@ -81,7 +81,7 @@ test_batch_ip = tbos.billgate.net
 #----------------------------------------------------------
 # 상용(1)/테스트(0) - 테스트 후 상용 오픈시 mode 1로 수정
 #----------------------------------------------------------
-mode = 0
+mode = 1
 #----------------------------------------------------------
 # 소켓 타임 아웃(millisecond, 기본 20초)
 #----------------------------------------------------------
@@ -90,7 +90,7 @@ timeout = 20000
 # 로그 - 실제로 존재하는 디렉토리로 지정 및 권한 설정
 #----------------------------------------------------------
 log = 1
-log_file = /usr1/bizweb/logs/
+log_file = C:\
 #----------------------------------------------------------
 # 암호화 정보
 #----------------------------------------------------------
