--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,6 @@
-
 spring:
-  messages:
-    encoding: EUC-KR
   datasource:
-    url: jdbc:mariadb://pintossmall2.cafe24.com:3306/pintossmall2?serverTimezone=UTC&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+    url: jdbc:mariadb://localhost:3306/pintossmall2?serverTimezone=UTC&characterEncoding=UTF-8&createDatabaseIfNotExist=true
     username: pintossmall2
     password: cho459800
     driver-class-name: org.mariadb.jdbc.Driver
@@ -16,7 +13,7 @@ spring:
     hibernate:
       ddl-auto: update
   profiles:
-    include: oauth,pay,coolsm
+    include: oauth
   config:
     import: optional:file:.env[.properties]
   mail:
@@ -38,10 +35,7 @@ spring:
     suffix: .html
     encoding: EUC-KR
 
-
 logging:
   level:
     org.springframework.security: DEBUG
     org.springframework.web: DEBUG
-server:
-  port: 88
