--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	implementation 'de.huxhorn.sulky:de.huxhorn.sulky.ulid:8.2.0'
+	//coolsms
+	implementation 'net.nurigo:sdk:4.3.0'
 	compileOnly 'org.projectlombok:lombok'
 //	runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
