--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
   datasource:
     url: jdbc:mariadb://pintossmall2.cafe24.com:3306/pintossmall2?serverTimezone=UTC&characterEncoding=UTF-8&createDatabaseIfNotExist=true
@@ -13,7 +14,7 @@ spring:
     hibernate:
       ddl-auto: update
   profiles:
-    include: oauth
+    include: oauth, sms
   config:
     import: optional:file:.env[.properties]
   mail:
@@ -33,3 +34,5 @@ logging:
   level:
     org.springframework.security: DEBUG
     org.springframework.web: DEBUG
+server:
+  port: 88
